--- a/PhasmoMonoCheat.csproj
+++ b/PhasmoMonoCheat.csproj
@@ -285,10 +285,12 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Common\BasicInformations.cs" />
-    <Compile Include="Common\Fullbright.cs" />
+    <Compile Include="Common\DebugC.cs" />
     <Compile Include="Common\ESP.cs" />
+    <Compile Include="Common\Fullbright.cs" />
     <Compile Include="Common\Loader.cs" />
     <Compile Include="Common\Main.cs" />
+    <Compile Include="Common\Trolling.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Utils\CheatToggles.cs" />
     <Compile Include="Utils\Console.cs" />
